--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "michael vanderford",
   "description": "File Manager",
   "keywords": [
+    "electron file manager",
     "open-source",
     "app",
     "file manager",
@@ -22,10 +23,13 @@
     "start": "electron ."
   },
   "dependencies": {
+    "7zip-bin": "^5.1.1",
     "bootstrap": "^5.0.1",
     "chart.js": "^3.5.1",
     "dragselect": "^2.2.2",
+    "drivelist": "^9.2.4",
     "jquery": "^3.6.0",
+    "mime-types": "^2.1.35",
     "mousetrap": "^1.6.5",
     "node-sqlite": "^0.0.2-security",
     "usb": "^2.1.2",
