--- a/package.json
+++ b/package.json
@@ -1,39 +1,40 @@
 {
-  "name": "electron_file_manager",
-  "version": "0.0.1",
-  "author": "michael vanderford",
-  "description": "File Manager",
-  "keywords": [
-    "electron file manager",
-    "open-source",
-    "app",
-    "file manager",
-    "file",
-    "explorer",
-    "browser",
-    "modern",
-    "cross-platform",
-    "vue",
-    "electron",
-    "node",
-    "js"
-  ],
-  "main": "main.js",
-  "scripts": {
-    "start": "electron ."
-  },
-  "dependencies": {
-    "bootstrap": "^5.0.1",
-    "bootstrap-icons": "^1.8.2",
-    "chart.js": "^3.5.1",
-    "dragselect": "^2.3.1",
-    "jquery": "^3.6.0",
-    "mime-types": "^2.1.35",
-    "mousetrap": "^1.6.5",
-    "open": "^8.4.0",
-    "webpack": "^5.66.0"
-  },
-  "devDependencies": {
-    "electron": "^19.0.14"
-  }
+    "name": "electron_file_manager",
+    "version": "0.0.1",
+    "author": "michael vanderford",
+    "description": "File Manager",
+    "keywords": [
+        "electron file manager",
+        "open-source",
+        "app",
+        "file manager",
+        "file",
+        "explorer",
+        "browser",
+        "modern",
+        "cross-platform",
+        "vue",
+        "electron",
+        "node",
+        "js"
+    ],
+    "main": "main.js",
+    "scripts": {
+        "start": "electron ."
+    },
+    "dependencies": {
+        "bootstrap": "^5.0.1",
+        "bootstrap-icons": "^1.8.2",
+        "bulma": "^0.9.4",
+        "chart.js": "^3.5.1",
+        "dragselect": "^2.3.1",
+        "imagemagick": "^0.1.3",
+        "jquery": "^3.6.0",
+        "mime-types": "^2.1.35",
+        "mousetrap": "^1.6.5",
+        "open": "^8.4.0"
+    },
+    "devDependencies": {
+        "electron": "^19.0.10"
+    }
 }
