File compression work.

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
         "jquery": "^3.6.0",
         "mime-types": "^2.1.35",
         "mousetrap": "^1.6.5",
-        "open": "^8.4.0"
+        "open": "^8.4.0",
+        "uikit": "^3.15.6"
     },
     "devDependencies": {
         "electron": "^19.0.10"
