--- a/package.json
+++ b/package.json
@@ -4,16 +4,13 @@
     "author": "michael vanderford",
     "description": "File Manager",
     "keywords": [
+        "linux file manager",
         "electron file manager",
         "open-source",
         "app",
         "file manager",
         "file",
         "explorer",
-        "browser",
-        "modern",
-        "cross-platform",
-        "vue",
         "electron",
         "node",
         "js"
