--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "electron_file_manager",
+    "name": "String File Manager",
     "version": "0.0.1",
     "author": "michael vanderford",
     "description": "File Manager",
