--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "chart.js": "^3.5.1",
         "dragselect": "^2.3.1",
         "dragselect2": "git+https://github.com/michael-vanderford/dragselect2.git",
+        "gio": "file:../gio",
         "imagemagick": "^0.1.3",
         "jquery": "^3.6.0",
         "mime-types": "^2.1.35",
@@ -31,6 +32,7 @@
         "open": "^8.4.0"
     },
     "devDependencies": {
-        "electron": "^19.0.10"
+        "electron": "^22.1.0",
+        "electron-rebuild": "^3.2.9"
     }
 }
