--- a/package.json
+++ b/package.json
@@ -20,18 +20,19 @@
         "start": "electron ."
     },
     "dependencies": {
+        "@electron/rebuild": "^3.2.10",
+        "bindings": "^1.5.0",
         "bootstrap-icons": "^1.8.2",
         "chart.js": "^3.5.1",
         "dragselect": "^2.3.1",
-        "dragselect2": "git+https://github.com/michael-vanderford/dragselect2.git",
         "imagemagick": "^0.1.3",
         "jquery": "^3.6.0",
         "mime-types": "^2.1.35",
         "mousetrap": "^1.6.5",
+        "nan": "^2.17.0",
         "open": "^8.4.0"
     },
     "devDependencies": {
-        "electron": "^22.1.0",
-        "electron-rebuild": "^3.2.9"
+        "electron": "^22.1.0"
     }
 }
