--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "bootstrap-icons": "^1.8.2",
         "chart.js": "^3.5.1",
         "dragselect": "^2.3.1",
+        "gio": "^0.0.1",
         "imagemagick": "^0.1.3",
         "jquery": "^3.6.0",
         "mime-types": "^2.1.35",
