--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     },
     "devDependencies": {
         "electron": "^22.1.0",
-        "electron-packager": "^17.1.1"
+        "electron-packager": "^17.1.1",
+        "eslint": "^8.39.0",
+        "prettier": "^2.8.8"
     }
 }
