--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bootstrap-icons": "^1.10.5",
     "dragselect": "^2.7.4",
-    "electron-store": "^8.1.0"
+    "electron-store": "^8.1.0",
+    "semantic-ui-icon": "^2.5.0"
   }
 }
