--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap-icons": "^1.10.5",
     "dragselect": "^2.7.4",
     "electron-store": "^8.1.0",
+    "node-addon-api": "^6.1.0",
     "semantic-ui-icon": "^2.5.0"
   }
 }
