Added get_mounts to gio module

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,9 @@
         "utility": "cpp",
         "istream": "cpp",
         "ostream": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "chrono": "cpp",
+        "compare": "cpp",
+        "typeinfo": "cpp"
     }
 }
