--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "bootstrap-icons": "^1.10.5",
+    "chart.js": "^3.9.1",
     "dragselect": "^2.7.4",
     "electron-store": "^8.1.0",
+    "mousetrap": "^1.6.5",
     "node-addon-api": "^6.1.0",
     "semantic-ui-icon": "^2.5.0"
   }
