--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "electron . --filesystem=xdg-run/gvfsd",
+    "start": "electron .",
     "build": "electron-builder --linux deb"
   },
   "keywords": [],
