Trap watcher error

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "string-file-manager",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "File Manager",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
   "build": {
-    "appId": "com.example.app",
+    "appId": "com.stringboardsoftware.stringfilemanager",
     "linux": {
       "target": "deb"
     }
