Moved last of the exec to main

--- a/assets/config/settings.json
+++ b/assets/config/settings.json
@@ -10,6 +10,9 @@
             "Folder Count": true
         }
     },
+    "Header Menu": {
+        "show": true
+    },
     "keyboard_shortcuts": {
         "Backspace": "Backspace",
         "ShowHome": "Alt+H",
