--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "maintainer": "Michael Vanderford michael.vanderford@gmail.com",
     "scripts": {
         "start": "electron .",
+        "debug": "electron --inspect-brk .",
         "pack": "electron-builder --dir",
         "dist": "build"
     },
@@ -34,7 +35,7 @@
     },
     "email": "michael.vanderford@gmail.com",
     "devDependencies": {
-        "electron": "^25.3.2",
+        "electron": "^26.2.2",
         "electron-builder": "^24.6.4",
         "electron-installer-debian": "^3.2.0",
         "electron-packager": "^17.1.2"
@@ -44,7 +45,6 @@
         "chart.js": "^3.9.1",
         "mousetrap": "^1.6.5",
         "node-addon-api": "^6.1.0",
-        "node-gio": "file:../node-gio/node-gio-1.0.2.tgz",
         "semantic-ui-icon": "^2.5.0"
     }
 }
