--- a/gio/package.json
+++ b/gio/package.json
@@ -1,12 +1,20 @@
 {
-    "name": "gio",
-    "version": "1.0.0",
-    "description": "gonoe gio module",
-    "main": "index.js",
-    "dependencies": {
-        "node-gyp": "^9.4.0"
-    },
-    "devDependencies": {
-        "nan": "^2.17.0"
-    }
+  "name": "node-gio",
+  "version": "1.0.3",
+  "description": "C++ libgio utility for node",
+  "main": "./build/Release/gio",
+  "scripts": {
+    "build": "node-gyp configure build --target=26.2.2 --dist-url=https://electronjs.org/headers"
+  },
+  "keywords": [
+    "libgio",
+    "gio"
+  ],
+  "author": "Michael Vanderford",
+  "license": "GPLv3",
+  "gypfile": true,
+  "devDependencies": {
+    "nan": "^2.18.0",
+    "node-gyp": "^9.4.0"
+  }
 }
