Added check settings back. This needs to be tested
Added setting to move the navigation bar to the bottom of the screen

Added timeout to check settings

--- a/assets/config/settings.json
+++ b/assets/config/settings.json
@@ -15,6 +15,9 @@
     "Header Menu": {
         "show": true
     },
+    "Navigation Menu": {
+        "Move to Bottom": false
+    },
     "keyboard_shortcuts": {
         "Backspace": "Backspace",
         "ShowHome": "Alt+H",
@@ -42,12 +45,5 @@
         "NewWindow": "Ctrl+N",
         "Reload": "F5",
         "NewTab": "Ctrl+T"
-    },
-    "window": {
-        "length": 1400,
-        "width": 1459,
-        "x": 2194,
-        "y": 247,
-        "height": 696
     }
 }
