added some dropshadow effect added showMenubar setting

--- a/assets/config/settings.json
+++ b/assets/config/settings.json
@@ -12,6 +12,9 @@
         "Size": true,
         "Count": true
     },
+    "File Menu": {
+        "show": true
+    },
     "Header Menu": {
         "show": true
     },
