set header menu to false in settings.json

--- a/assets/config/settings.json
+++ b/assets/config/settings.json
@@ -16,7 +16,7 @@
         "show": true
     },
     "Header Menu": {
-        "show": true
+        "show": false
     },
     "Navigation Menu": {
         "Move to Bottom": false
